feat: update service
