# src/services2/api/MessageApi.ts
@@ -1,0 +1,70 @@
+/**
+ * Test swagger
+ * Testing the Fastify swagger API
+ *
+ * OpenAPI spec version: 0.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+
+import ajax, { AjaxPromise, ExtraFetchParams } from '@ajax'
+import * as models from '../model/models'
+
+/* tslint:disable:no-unused-variable member-ordering object-literal-shorthand */
+
+/**
+  * @description apiMessageListGet参数
+  * @property `[pageNum]` 分页页码
+  * @property `[pageSize]` 每页数量
+  */
+export interface ParamsapiMessageListGet {
+  // queryParams
+  /**
+   * 分页页码
+   */
+  pageNum?: string;
+  /**
+   * 每页数量
+   */
+  pageSize?: string;
+}
+
+export class MessageApi {
+  protected $basePath = ''.replace(/\/$/, '')
+
+  public constructor(basePath?: string) {
+    if (basePath !== undefined) {
+      this.$basePath = basePath.replace(/\/$/, '')
+    }
+  }
+
+  /**
+   * 获取消息列表
+   * @summary 获取消息列表
+   * @param params ParamsapiMessageListGet
+   
+   * @param opt ajax config
+   * @returns models.InlineResponse2003
+   */
+  public apiMessageListGet = (
+    params: ParamsapiMessageListGet,
+    opt?: ExtraFetchParams
+  ) : AjaxPromise<models.InlineResponse2003>  => {
+    const url = this.$basePath + '/api/message/list'
+    const p: any = {}
+    p.query = {}
+    if ('pageNum' in params) p.query.pageNum = params.pageNum
+    if ('pageSize' in params) p.query.pageSize = params.pageSize
+    return ajax.ajax({
+      ...opt,
+      method: 'GET',
+      url,
+      ...p
+    })
+  }
+}
+
+export default new MessageApi()
